px4_ws/logs/px4_offboard/build.make.149.log.stderr
In file included from /home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:3:0:
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp: In member function 'bool CtrlPx4::commandUpdate()':
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:90:60: error: expected primary-expression before ')' token
  if (yaw_calibrate && (ros::Time::now().toSec() - secs)> 3)){
                                                            ^
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:90:60: error: expected ';' before ')' token
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:51:1: error: expected '}' at end of input
 }
 ^
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:51:1: error: expected '}' at end of input
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:51:1: error: expected '}' at end of input
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
